<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbl_qs4" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_clause1"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/toggleButton1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_clause2"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_clause3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:checked="true"
            android:textOff="@string/tg_btn_false"
            android:textOn="@string/tg_btn_true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:checked="true"
            android:textOff="@string/tg_btn_false"
            android:textOn="@string/tg_btn_true"
            app:layout_constraintStart_toStartOf="@+id/toggleButton1"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:checked="true"
            android:textOn="@string/tg_btn_true"
            android:textOff="@string/tg_btn_false"
            app:layout_constraintStart_toStartOf="@+id/toggleButton1"
            app:layout_constraintTop_toTopOf="@+id/textView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_rs"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>