<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lbl_qs2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/RBChooseA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chooseA"
            app:layout_constraintBottom_toTopOf="@+id/RBChooseC"
            app:layout_constraintEnd_toStartOf="@+id/RBChooseB"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/RBChooseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chooseB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/RBChooseA"
            app:layout_constraintTop_toTopOf="@+id/RBChooseA" />

        <RadioButton
            android:id="@+id/RBChooseC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chooseC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/RBChooseD"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RBChooseA" />

        <RadioButton
            android:id="@+id/RBChooseD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chooseD"
            app:layout_constraintStart_toStartOf="@+id/RBChooseB"
            app:layout_constraintTop_toTopOf="@+id/RBChooseC" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

    </LinearLayout>


</LinearLayout>